# solsentinel

./: .env.example  .gitignore  API_INTEGRATION.md  Anchor.toml  CONTRIBUTING.md  DEMO.md  DEPLOYMENT.md  LICENSE  README.md  ROADMAP.md  jest.config.js  package-lock.json  package.json  tsconfig.test.json
programs/sol_sentinel/: Cargo.toml
programs/sol_sentinel/src/: instructions.rs  lib.rs  lib_backup.rs  lib_fixed.rs  lib_v2.rs  social.rs
scripts/: demo.ts  deploy.sh  init_oracle.sh  init_simple.ts  initialize.ts  run_uploader.sh  test_social.ts
src/: analyzer.ts  api.ts  crawler.ts  mockData.ts  onchain.ts  types.ts  uploader.ts
tests/: api.test.ts  sol_sentinel.ts
